--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
                 <a class="logo link" href="./index.html"><span class="logo-first-word">Web</span>Studio</a>
                 <ul class="navigation-list list">
                     <li class="navigation-item">
-                        <a class="navigation-item-link link current" href="./index.html">Студія</a>
+                        <a class="navigation-item-link link" href="./index.html">Студія</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-item-link link" href="./portfolio.html">Портфоліо</a>
+                        <a class="navigation-item-link link current" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-item-link link" href="">Контакти</a>
